skeplib/tests/fixtures/sema_project/valid/struct_impl_cross_module/main.sk
from models.user import User;
fn main() -> Int {
  let u: User = User { id: 7 };
  return u.bump(5);
}
