skeplib/tests/fixtures/sema_project/invalid/duplicate_alias/b.sk
fn bar() -> Int { return 2; }
export { bar };
